# pika-consistency-test

./: CMakeLists.txt  README.md  pika-migrate.md
.github/workflows/: pika.yml
codis/: go.mod  go.sum
conf/: pika.conf
include/: migrator_thread.h  pika_conf.h  pika_define.h  pika_sender.h  pika_server.h  pika_version.h  redis_sender.h
src/: migrator_thread.cc  pika.cc  pika_admin.cc  pika_bit.cc  pika_client_conn.cc  pika_command.cc  pika_conf.cc  pika_db.cc  pika_kv.cc  pika_repl_bgworker.cc  pika_repl_client.cc  pika_repl_client_conn.cc  pika_repl_server_conn.cc  pika_rm.cc  pika_sender.cc  pika_server.cc  redis_sender.cc  rsync_client.cc
src/pstd/src/: lock_mgr.cc
src/storage/src/: redis_strings.cc  redis_zsets.cc
tests/integration/: consistency_test.go  server_test.go  string_test.go
tests/unit/type/: bitops.tcl
tools/: CMakeLists.txt
tools/consistency_check_tool/: README_CN.md  commands.go  common.go  consistency.go  consistencyCheck.sh  go.mod  write.sh
tools/consistent_check/: CMakeLists.txt  README.md  consistent_check.cc
tools/manifest_generator/include/: pika_define.h
tools/pika-port/pika_port_3/: pika_define.h
tools/pika_migrate/: CMakeLists.txt  pika-migrate.md
tools/pika_migrate/conf/: pika.conf
tools/pika_migrate/include/: migrator_thread.h  pika_conf.h  pika_define.h  pika_repl_bgworker.h  pika_sender.h  pika_server.h  redis_sender.h
tools/pika_migrate/src/: migrator_thread.cc  pika_bit.cc  pika_conf.cc  pika_db.cc  pika_repl_bgworker.cc  pika_sender.cc  pika_server.cc  redis_sender.cc
